update: 好用的前端网站集合

--- a/source/_posts/2022_03_好用的前端网站集合.md
+++ b/source/_posts/2022_03_好用的前端网站集合.md
@@ -38,7 +38,7 @@ tags:
 
 ![](https-::www.typescriptlang.org:play.jpg)
 
-Typescript 官方提供的 TypeScript 在线调试运行工具，如果你遇到了一些 TS 难题，你可以到这个网站编写出你的代码，然后将链接（代码改动会经过编码后会被动态添加到当前 url 上）发给神通广大的网友们，或者你的好友们，请他们帮你解决问题
+Typescript 官方提供的 TypeScript 在线调试运行工具，如果你遇到了一些 TS 难题（或者一下 ts 代码的 demo），你可以到这个网站编写出你的代码，然后将链接（代码改动会经过编码后会被动态添加到当前 url 上）发给神通广大的网友们，或者你的好友们，请他们帮你解决问题
 
 除了这个，它还能将你写的 ts 代码在线编译成 `js`、`.d.ts` 等，更多的功能你去试一下就知道了
 
@@ -65,11 +65,15 @@ vue3 的模板解析工具，学习源码必备
 
 ![](https-::v2.template-explorer.vuejs.org:.jpg)
 
+vue2 的模板解析工具，学习 vue3 源码的时候，可以与上面 v3 的解析工具一起结合起来看，看看变化、优化都在哪
+
 ### 抽象语法树解析
 
 [https://astexplorer.net/](https://astexplorer.net/)
 
 ![](https-::astexplorer.net:.jpg)
+
+js 的抽象语法树在线解析工具，能让你更好的理解 js，学习一些编译工具必备
 
 ### CodeSandBox
 
@@ -77,11 +81,38 @@ vue3 的模板解析工具，学习源码必备
 
 ![](https-::codesandbox.io:.jpg)
 
+能快速搭建一个简单的项目，在线运行，而且速度很快（你网快的前提下），你也可以用别人的模板来新建项目，复杂的项目它也 hold 的住，不用装环境，在线撸代码，谁不爱呢
+
+登录后云端保存项目，把链接分享给其他人就可以方便的查看，提供 api 来让你的应用拥有 `在CodeSandBox中打开` 的能力
+
+免费的！
+
+还可以[搜索](https://codesandbox.io/search)别人的写好的 demo，你不知道一个库怎么用的时候，或有什么技巧的时候，可以来搜搜看看，既可以看代码，又可以在线实时预览，“CV 工程师必备”
+
 ### CodePen
 
 [https://codepen.io/](https://codepen.io/)
 
 ![](https-::codepen.io:.jpg)
+
+
+支持 HTML、CSS、JS，比 codesandbox 轻量，适合写简单的 demo
+
+### babel 在线编译
+
+[https://babeljs.io/repl](https://babeljs.io/repl)
+
+![](https-::babeljs.io:repl.jpg)
+
+你可以将各种版本的 js、ts 代码转换成其他低版本的 js 代码
+
+### github1s
+
+[https://github1s.com/](https://github1s.com/kawayiLinLin/typescript-lodash/blob/HEAD/lib/array.ts)
+
+![](https-::github1s.com:.jpg)
+
+在 github 代码仓库的路径的 `https://github` 后面加个 1s，就能用编辑器模式看源码了，比直接在 github 中看方便多了
 
 ## 可视化在线工具/其他在线工具
 
@@ -91,6 +122,8 @@ vue3 的模板解析工具，学习源码必备
 
 ![](https-::jex.im:regulex.jpg)
 
+遇到一个复杂的正则表达式，你多看几眼就可能会多掉几根头发，但是有了它，你就可以很好的分析出这个正则表达式的用途了
+
 ### 在线 Postman
 
 需要注册哦
@@ -99,6 +132,9 @@ vue3 的模板解析工具，学习源码必备
 
 ![](https-::web.postman.co:.jpg)
 
+一直在线用一直爽
+
+当然，有已经安装的应用就不需要了
 
 ### CSS3剪贴路径（Clip-path）在线生成器工具
 
@@ -106,9 +142,15 @@ vue3 的模板解析工具，学习源码必备
 
 ![](http-::tools.jb51.net:code:css3path.jpg)
 
+你想玩些花里胡哨的样式的时候必备，但是自己写是不可能自己写的，让机器生成好自己再慢慢调吧
+
 ### CSS 动画
 
 [http://css3lib.alloyteam.com/](http://css3lib.alloyteam.com/)
+
+![](http-::css3lib.alloyteam.com.jpg)
+
+这个网站有一些炫酷的样式和动画效果，不过风比较偏向国外的风格
 
 ### Canvas 背景动画（博客可用）
 
@@ -116,11 +158,19 @@ vue3 的模板解析工具，学习源码必备
 
 ![](https-::jsrun.net:square:search.jpg)
 
+你把这个里面代码粘贴出来，放到你的个人博客中，就可以实现很炫酷的背景效果了！
+
+缺点是，一般加了这个，笔记本电脑风扇就会呼啸起来
+
+这个网站里面还有一些其他的工具，比如下面这个
+
 ### 在线代码主题配色工具
 
 [https://jsrun.net/app/49pKp](https://jsrun.net/app/49pKp)
 
 ![](https-::jsrun.net:app:49pKp.jpg)
+
+跟上面是同一个网站，你如果觉得自己编辑器的代码主题颜色不好看，那你可以用它来慢慢调
 
 ### 在线配色
 
@@ -128,19 +178,65 @@ vue3 的模板解析工具，学习源码必备
 
 ![](https-::colorsinspo.com:.jpg)
 
+如果你想搞一个自己的组件库，网站，不知道配色的就可以自己来配色
+
 ### 兼容性查询 Can I Use
 
 [https://caniuse.com/](https://caniuse.com/)
 
 ![](https-::caniuse.com:.jpg)
 
-### babel 在线编译
+可以查询一个 js api 或者 css 属性的在各个浏览器的各个版本下的兼容性，里面还有 QQ 浏览器，UC 浏览器是最有趣的事
 
-[https://babeljs.io/repl](https://babeljs.io/repl)
+### EventLoop 可视化
 
-![](https-::babeljs.io:repl.jpg)
+[https://www.jsv9000.app/](https://www.jsv9000.app/)
 
-## 框架/库/工具
+![](https-::www.jsv9000.app:.jpg)
+
+前端小白理解 EventLoop 的利器
+
+### CSS 阴影生成器
+
+[https://www.jq22.com/too-jq22/boxshadow/index.html](https://www.jq22.com/too-jq22/boxshadow/index.html)
+
+![](https-::www.jq22.com:too-jq22:boxshadow.jpg)
+
+`box-shadow` 是一个很神奇且有用的属性，在这个网站可以生成需要的 `box-shadow` 代码
+
+### JSON 转 TS 代码
+
+[http://www.json2ts.com/](http://www.json2ts.com/)
+
+![](http-::www.json2ts.com:.jpg)
+
+十分有用，能提高你写TS代码的效率，特别是需要定义接口的返回类型时，用它就是复制粘贴了！
+
+### 在线正则表达式测试
+
+[https://regex101.com/](https://regex101.com/)
+
+![](https-::regex101.com:.jpg)
+
+比起用在线工具测试正则，我更习惯直接在控制台写代码测试
+
+### CSS 代码生成
+
+[https://www.cssmatic.com/gradient-generator](https://www.cssmatic.com/gradient-generator)
+
+![](https-::www.cssmatic.com:gradient-generator.jpg)
+
+可以生成四种类型的 CSS 代码，渐变，阴影等
+
+### carbon
+
+[https://carbon.now.sh/](https://carbon.now.sh/)
+
+![](https-::carbon.now.sh:.jpg)
+
+让你的代码变的更美观，自己写文章或者论文都可以用这个工具来对自己的代码进行美化
+
+## 框架/库/工具 文档
 
 ### UI库
 
@@ -150,9 +246,33 @@ vue3 的模板解析工具，学习源码必备
 
 ![](https-::vant-contrib.gitee.io:vant:::zh-CN.jpg)
 
-#### PC 端
 
-1
+### 图标库
+
+#### Font Awesome 中文网
+
+[http://www.fontawesome.com.cn/](http://www.fontawesome.com.cn/)
+
+![](http-::www.fontawesome.com.cn:.jpg)
+
+
+#### IcoMoon
+
+[https://icomoon.io/](https://icomoon.io/)
+
+![](https-::icomoon.io:.jpg)
+
+#### iconfont
+
+[https://www.iconfont.cn/](https://www.iconfont.cn/)
+
+![](https-::www.iconfont.cn:.jpg)
+
+#### IconPark
+
+[https://iconpark.oceanengine.com/official](https://iconpark.oceanengine.com/official)
+
+![](https-::iconpark.oceanengine.com:official.jpg)
 
 ### JS 框架/库
 
@@ -161,13 +281,70 @@ vue3 的模板解析工具，学习源码必备
 [Vue2 中文文档 https://cn.vuejs.org/index.html](https://cn.vuejs.org/index.html)
 
 
+### 其他
 
+#### ECMA 官方文档
+
+[https://tc39.es/ecma262/](https://tc39.es/ecma262/)
+
+![](https-::tc39.es:ecma262:.jpg)
+
+#### Vscode 插件开发中文文档
+
+[https://liiked.github.io/VS-Code-Extension-Doc-ZH/#/](https://liiked.github.io/VS-Code-Extension-Doc-ZH/#/)
+
+![](https-::liiked.github.io:VS-Code-Extension-Doc-ZH::.jpg)
+
+
+#### MDN Web中文技术文档
+
+[https://developer.mozilla.org/zh-CN/docs/Web](https://developer.mozilla.org/zh-CN/docs/Web)
+
+[Web API 接口参考](https://developer.mozilla.org/zh-CN/docs/Web/API)
+
+![](https-::developer.mozilla.org:zh-CN:docs:Web.jpg)
+
+#### 菜鸟教程
+
+[HTML 标签速查（按首字母）](https://www.runoob.com/tags/html-reference.html)
+
+[HTML 标签速查（按功能）](https://www.runoob.com/tags/ref-byfunc.html)
+
+[CSS 属性速查](https://www.runoob.com/cssref/css-reference.html)
+
+[CSS 选择器速查](https://www.runoob.com/cssref/css-selectors.html)
+
+[JS 参考手册](https://www.runoob.com/jsref/jsref-tutorial.html)
+
+### 你可以在下列网站找到更多
+
+#### awesome list chinese
+
+[https://asmcn.icopy.site/](https://asmcn.icopy.site/)
+
+![https-::asmcn.icopy.site:.jpg](https-::asmcn.icopy.site:.jpg)
+
+#### npm
+
+[https://npmjs.com](https://npmjs.com)
+
+#### github
+
+[https://github.com](https://github.com)
 
 ## 在线书籍/文档
 
 ### 《ES6标准入门》阮一峰
 
 [http://es6.ruanyifeng.com/](http://es6.ruanyifeng.com/)
+
+### 《浏览器工作原理与实践》
+
+[https://blog.poetries.top/browser-working-principle/](https://blog.poetries.top/browser-working-principle/)
+
+### 《深入浅出 webpack》
+
+[https://webpack.wuhaolin.cn/](https://webpack.wuhaolin.cn/)
 
 ### 《代码随想录》
 
@@ -185,7 +362,6 @@ vue3 的模板解析工具，学习源码必备
 
 [https://react.iamkasong.com/](https://react.iamkasong.com/)
 
-
 ### 《Vue 技术揭秘》
 
 [https://ustbhuangyi.github.io/vue-analysis/v2/prepare/](https://ustbhuangyi.github.io/vue-analysis/v2/prepare/)
@@ -197,3 +373,11 @@ vue3 的模板解析工具，学习源码必备
 ### 《深入理解TypeScript》
 
 [https://jkchao.github.io/typescript-book-chinese/](https://jkchao.github.io/typescript-book-chinese/)
+
+### 《You-need-to-know-css》
+
+[https://lhammer.cn/You-need-to-know-css/#/zh-cn/introduce?v=1](https://lhammer.cn/You-need-to-know-css/#/zh-cn/introduce?v=1)
+
+### 《CSS Inspiration》
+
+[https://chokcoco.github.io/CSS-Inspiration/#/](https://chokcoco.github.io/CSS-Inspiration/#/)
