update: 面试官：你说你会玩TS类型体操，那你能把类型打印出来吗？

--- a/source/_posts/2022_05_面试官：你说你会玩TS类型体操，那你能把类型打印出来吗？.md
+++ b/source/_posts/2022_05_面试官：你说你会玩TS类型体操，那你能把类型打印出来吗？.md
@@ -25,3 +25,13 @@ console.log(A)
 在回答这个问题之前，我们需要对 TS 的源码/原理有基本的认识
 
 然后要先回答这三个问题，TS中的类型是什么？TS中的类型为什么不能当做值来使用？TS中是如何处理像“类型不能当一个值”来使用的错误的？
+
+## 如何阅读 TS 源码？
+
+### 如何拉取 TS 源代码并编译？
+
+### TS 源码的目录结构
+
+### 你能用自己编译好的 TS 源码做些什么
+
+#### VSCode TS 服务
