update: 面试官：你说你会玩TS类型体操，那你能把类型打印出来吗？

--- a/source/_posts/2022_05_面试官：你说你会玩TS类型体操，那你能把类型打印出来吗？.md
+++ b/source/_posts/2022_05_面试官：你说你会玩TS类型体操，那你能把类型打印出来吗？.md
@@ -4,15 +4,17 @@ date: 2022-05-22 14:32:45
 tags:
 ---
 
-面试官：听说你上次写了一个 TypeScript Lodash 库，但是好像没什么用吧
+***面试官***：听说你上次写了一个 TypeScript Lodash 库，但是好像没什么用吧
 
-我：对，上次我写 TypeScript Lodash 库 还是在上次
+***我***：对，上次我写 TypeScript Lodash 库 还是在上次
 
-面试官：？？？
+***面试官***：？？？
 
-我：其实里面的大部分都很难用到，但是它能提升你对 TS 用法的认知程度，特定场景下也很有用，比如对对象类型的一些操作
+***我***：其实里面的大部分都很难用到，但是它能提升我们对 TS 用法的认知程度，特定场景下也很有用，比如对对象类型的一些操作
 
-面试官：那看起来 TS 类型体操并没有很有用呢？**对初学者来说，经常把一个类型当做一个 变（常）量/值 来使用，于是写出了如下代码，你能通过某些特殊的操作，让这段代码能够成功执行吗？**如果你可以解决这个问题，我就认为你的 TS 知识能够通过我的面试
+***面试官***：那看起来 TS 类型体操并没有很有用呢？**对初学者来说，经常把一个类型当做一个 变（常）量/值 来使用，于是写出了如下代码，你能通过某些特殊的操作，让这段代码能够成功执行吗？**如果你可以解决这个问题，我就认为你的 TS 知识能够通过我的面试
+
+<!-- more -->
 
 ```ts
 type A = '111'
@@ -20,18 +22,93 @@ type A = '111'
 console.log(A)
 ```
 
-我：这个问题对应的需求场景不常见，我来试试...
+***我***：这个问题对应的需求场景不常见，我来试试...
 
 在回答这个问题之前，我们需要对 TS 的源码/原理有基本的认识
 
-然后要先回答这三个问题，TS中的类型是什么？TS中的类型为什么不能当做值来使用？TS中是如何处理像“类型不能当一个值”来使用的错误的？
+然后要先回答这三个问题：
+1. TS中的类型是什么？
+2. TS中的类型为什么不能当做值来使用？
+3. TS中是如何处理像“类型不能当一个值来使用”的错误的？
 
 ## 如何阅读 TS 源码？
 
 ### 如何拉取 TS 源代码并编译？
 
-### TS 源码的目录结构
+关于 TS 源码的阅读和调试可以参考这篇文章[我读 Typescript 源码的秘诀都在这里了](https://juejin.cn/post/7015567717876908063)
+
+使用 git 拉取 TS 源代码（注意，源代码超过1个G）
+
+```shell
+git clone https://github.com/microsoft/TypeScript.git
+```
+
+进入生成的文件夹 TypeScript，装包
+
+```shell
+yarn
+```
+
+编译
+
+```shell
+yarn run build:compiler
+```
 
 ### 你能用自己编译好的 TS 源码做些什么
 
 #### VSCode TS 服务
+
+VSCode 中的 TS 语言服务是可以自定义的
+
+![](vscode-typescript-version.jpg)
+
+如果你当前编辑的是一个 TS 文件，在上图红框所示的位置（看到你 VSCode 的右下角），可以设置 TS 的版本
+
+![](typescript-version-dialog.jpg)
+
+**使用 VS Code 的版本**，即使用 VS Code 自己用的版本，一般为最新的稳定版本的 TypeScript 语言服务，不需要额外的安装
+
+如果你在你的项目的 node_modules 中安装了 typescript，那么会像我一样出现另一个选项，**使用工作区版本**，一般而言，你最好使用工作区的版本，让 VSCode 中的语言服务与你的项目一致，否则，有可能出现`代码提示`与`编译/类型检查结果`不一致的情况
+
+除了上述两种选项，还有一个隐藏选项，参考 [VSCode文档-Using_newer_TypeScript_versions](https://code.visualstudio.com/docs/typescript/typescript-compiling#_using-newer-typescript-versions)
+
+你可以在 settings.json 文件中配置 `typescript.tsdk` 选项
+
+在项目中的 `.vscode` 文件夹中，新建 `settings.json` 文件
+
+刚刚我们已经对我们使用 git 拉下来的 TS 源码进行了编译，你会发现生成了一个 `built/local` 文件夹
+
+那么我们可以把这个设置为 VSCode TS 服务
+
+在上述 settings.json 文件中，增加配置
+
+```json
+{
+    "typescript.tsdk": "./TypeScript/built/local/tscserver.js"
+}
+```
+
+![](version-type-custom.jpg)
+
+选择我们刚刚自定义的工作区版本，然后你会发现 VSCode 自动找到了这个目录下的 tsserver.js 文件，这个文件是干啥的呢？让我们在下文进行讲解
+
+### TS 源码的目录结构和对应文件的用处
+
+![](ts-source-code-dirs.jpg)
+
++ bin 目录：在一些基于 node 的命令行工具中很常见，在 package.json 中的 `bin` 属性中设置命令及其指向 bin 目录的路径，即可在终端使用该命令，或者配置与 package.json 的 scripts 属性中；在 TS 源码的 bin 目录中，有 `tsc` 和 `tsserver` 两个文件，我们平时用的 `tsc ./index.ts` 就是执行的 `tsc` 文件
+
++ built 目录：编译产物
+
++ doc 目录：包含各种文档，如TypeScript语言规范和徽标，此目录的文件是过时的规范的快照，如果要看文档，请去[TypeScript Handbook](https://github.com/Microsoft/TypeScript-Handbook)
+
++ lib 目录：一些声明文件，你平常使用的 HTMLDivElement 类型，就是这里面定义的
+
++ loc 目录：全名 localize，即国际化，最后会被编译到 `built/local/{语言 如zh-cn}/diagnosticMessages.generated.json` 文件中，如上述的例子 `type A = '111'; console.log(A)` 中 `console.log` 中 Token `A` 处的报错代码是 `2693`，那么我们在 `built/local/zh-cn/diagnosticMessages.generated.json` 文件中搜索到对应的文案提示为 `“{0}”仅表示类型，但在此处却作为值使用。`，你可以通过这个文件学习 TS 所有能抛出的错误，一共有 1800 + 条
+
++ scripts 目录：一些编译（或其他用途）脚本，如上述的 loc 目录中的国际化生成逻辑就在 scripts 目录中编写
+
++ src 目录：核心源码
+
+![](ts-source-code-src-dirs.jpg)
