update: 面试官：你说你会玩TS类型体操，那你能把类型打印出来吗？

--- a/source/_posts/2022_05_面试官：你说你会玩TS类型体操，那你能把类型打印出来吗？.md
+++ b/source/_posts/2022_05_面试官：你说你会玩TS类型体操，那你能把类型打印出来吗？.md
@@ -4,32 +4,33 @@ date: 2022-05-22 14:32:45
 tags:
 ---
 
-***面试官***：听说你上次写了一个 TypeScript Lodash 库，但是好像没什么用吧
+**_面试官_**：听说你上次写了一个 TypeScript Lodash 库，但是好像没什么用吧
 
-***我***：对，上次我写 TypeScript Lodash 库 还是在上次
+**_我_**：对，上次我写 TypeScript Lodash 库 还是在上次
 
-***面试官***：？？？
+**_面试官_**：？？？
 
-***我***：其实里面的大部分都很难用到，但是它能提升我们对 TS 用法的认知程度，特定场景下也很有用，比如对对象类型的一些操作
+**_我_**：其实里面的大部分都很难用到，但是它能提升我们对 TS 用法的认知程度，特定场景下也很有用，比如对对象类型的一些操作
 
-***面试官***：那看起来 TS 类型体操并没有很有用呢？**对初学者来说，经常把一个类型当做一个 变（常）量/值 来使用，于是写出了如下代码，你能通过某些特殊的操作，让这段代码能够成功执行吗？**如果你可以解决这个问题，我就认为你的 TS 知识能够通过我的面试
+**_面试官_**：那看起来 TS 类型体操并没有很有用呢？**对初学者来说，经常把一个类型当做一个 变（常）量/值 来使用，于是写出了如下代码，你能通过某些特殊的操作，让这段代码能够成功执行吗？**如果你可以解决这个问题，我就认为你的 TS 知识能够通过我的面试
 
 <!-- more -->
 
 ```ts
-type A = '111'
+type A = "111"
 
 console.log(A)
 ```
 
-***我***：这个问题对应的需求场景不常见，我来试试...
+**_我_**：这个问题对应的需求场景不常见，我来试试...
 
 在回答这个问题之前，我们需要对 TS 的源码/原理有基本的认识
 
 然后要先回答这三个问题：
-1. TS中的类型是什么？
-2. TS中的类型为什么不能当做值来使用？
-3. TS中是如何处理像“类型不能当一个值来使用”的错误的？
+
+1. TS 中的类型是什么？
+2. TS 中的类型为什么不能当做值来使用？
+3. TS 中是如何处理像“类型不能当一个值来使用”的错误的？
 
 ## 如何阅读 TS 源码？
 
@@ -37,7 +38,7 @@ console.log(A)
 
 关于 TS 源码的阅读和调试可以参考这篇文章[我读 Typescript 源码的秘诀都在这里了](https://juejin.cn/post/7015567717876908063)
 
-使用 git 拉取 TS 源代码（注意，源代码超过1个G）
+使用 git 拉取 TS 源代码（注意，源代码超过 1 个 G）
 
 ```shell
 git clone https://github.com/microsoft/TypeScript.git
@@ -71,7 +72,7 @@ VSCode 中的 TS 语言服务是可以自定义的
 
 如果你在你的项目的 node_modules 中安装了 typescript，那么会像我一样出现另一个选项，**使用工作区版本**，一般而言，你最好使用工作区的版本，让 VSCode 中的语言服务与你的项目一致，否则，有可能出现`代码提示`与`编译/类型检查结果`不一致的情况
 
-除了上述两种选项，还有一个隐藏选项，参考 [VSCode文档-Using_newer_TypeScript_versions](https://code.visualstudio.com/docs/typescript/typescript-compiling#_using-newer-typescript-versions)
+除了上述两种选项，还有一个隐藏选项，参考 [VSCode 文档-Using_newer_TypeScript_versions](https://code.visualstudio.com/docs/typescript/typescript-compiling#_using-newer-typescript-versions)
 
 你可以在 settings.json 文件中配置 `typescript.tsdk` 选项
 
@@ -85,7 +86,7 @@ VSCode 中的 TS 语言服务是可以自定义的
 
 ```json
 {
-    "typescript.tsdk": "./TypeScript/built/local/tscserver.js"
+  "typescript.tsdk": "./TypeScript/built/local/tscserver.js"
 }
 ```
 
@@ -97,18 +98,315 @@ VSCode 中的 TS 语言服务是可以自定义的
 
 ![](ts-source-code-dirs.jpg)
 
-+ bin 目录：在一些基于 node 的命令行工具中很常见，在 package.json 中的 `bin` 属性中设置命令及其指向 bin 目录的路径，即可在终端使用该命令，或者配置与 package.json 的 scripts 属性中；在 TS 源码的 bin 目录中，有 `tsc` 和 `tsserver` 两个文件，我们平时用的 `tsc ./index.ts` 就是执行的 `tsc` 文件
+- bin 目录：在一些基于 node 的命令行工具中很常见，在 package.json 中的 `bin` 属性中设置命令及其指向 bin 目录的路径，即可在终端使用该命令，或者配置与 package.json 的 scripts 属性中；在 TS 源码的 bin 目录中，有 `tsc` 和 `tsserver` 两个文件，我们平时用的 `tsc ./index.ts` 就是执行的 `tsc` 文件
 
-+ built 目录：编译产物
+- built 目录：编译产物
 
-+ doc 目录：包含各种文档，如TypeScript语言规范和徽标，此目录的文件是过时的规范的快照，如果要看文档，请去[TypeScript Handbook](https://github.com/Microsoft/TypeScript-Handbook)
+- doc 目录：包含各种文档，如 TypeScript 语言规范和徽标，此目录的文件是过时的规范的快照，如果要看文档，请去[TypeScript Handbook](https://github.com/Microsoft/TypeScript-Handbook)
 
-+ lib 目录：一些声明文件，你平常使用的 HTMLDivElement 类型，就是这里面定义的
+- lib 目录：一些声明文件，你平常使用的 HTMLDivElement 类型，就是这里面定义的
 
-+ loc 目录：全名 localize，即国际化，最后会被编译到 `built/local/{语言 如zh-cn}/diagnosticMessages.generated.json` 文件中，如上述的例子 `type A = '111'; console.log(A)` 中 `console.log` 中 Token `A` 处的报错代码是 `2693`，那么我们在 `built/local/zh-cn/diagnosticMessages.generated.json` 文件中搜索到对应的文案提示为 `“{0}”仅表示类型，但在此处却作为值使用。`，你可以通过这个文件学习 TS 所有能抛出的错误，一共有 1800 + 条
+- loc 目录：全名 localize，即国际化，最后会被编译到 `built/local/{语言 如zh-cn}/diagnosticMessages.generated.json` 文件中，如上述的例子 `type A = '111'; console.log(A)` 中 `console.log` 中 Token `A` 处的报错代码是 `2693`，那么我们在 `built/local/zh-cn/diagnosticMessages.generated.json` 文件中搜索到对应的文案提示为 `“{0}”仅表示类型，但在此处却作为值使用。`，你可以通过这个文件学习 TS 所有能抛出的错误，一共有 1800 + 条
 
-+ scripts 目录：一些编译（或其他用途）脚本，如上述的 loc 目录中的国际化生成逻辑就在 scripts 目录中编写
+- scripts 目录：一些编译（或其他用途）脚本，如上述的 loc 目录中的国际化生成逻辑就在 scripts 目录中编写
 
-+ src 目录：核心源码
+- src 目录：核心源码
 
 ![](ts-source-code-src-dirs.jpg)
+
+### TS 编译流程
+
+该部分可以阅读[TypeScript 源码详细解读(1)总览](https://www.cnblogs.com/xuld/p/12180913.html)
+
+我们使用 TS 的目的就是要让他进行类型检查，通过后，输出为浏览器可直接解释执行的 JS 文件
+
+TS 进行类型分析离不开语法树解析，而要将各种语法解析为一个树，就离不开词法分析
+
+分析之前，你首先得认识这些语法
+
+TS 对语法种类的定义，在 `TypeScript/src/compiler/types.ts` 文件中，搜索 `export const enum SyntaxKind` 即可找到
+
+在 TS 中，每一种 `Node`，都有属性 `kind`，其值为上述的 `SyntaxKind`
+
+```ts
+export interface Node extends ReadonlyTextRange {
+  readonly kind: SyntaxKind // 语法类型（包含 Token 类型，和 Node 类型）
+  readonly flags: NodeFlags // 节点标记，对节点包含的一些特殊的东西的标记，如节点中含有 this，文件中含有 async 函数
+  /* @internal */ modifierFlagsCache: ModifierFlags // 修饰符标记，如 public、private、protected、readonly 等
+  /* @internal */ readonly transformFlags: TransformFlags // 节点包含需要转换语法（如 ES高级语法的转换）、特定转换（装饰器）等的标记
+  readonly decorators?: NodeArray<Decorator> // 装饰器数组(按文档顺序)
+  readonly modifiers?: ModifiersArray // 修饰符数组
+  /* @internal */ id?: NodeId // 节点唯一的id
+  readonly parent: Node // 父节点
+  /* @internal */ original?: Node // 修改前的原始节点
+  /* @internal */ symbol: Symbol // 符号（符号指声明的 Token 的 id） (绑定时初始化)
+  /* @internal */ locals?: SymbolTable // 关联的局部变量（map 类型，符号表）
+  /* @internal */ nextContainer?: Node // Next container in declaration order (绑定时初始化)
+  /* @internal */ localSymbol?: Symbol // 节点声明的符号id (绑定时初始化，只针对导出的节点)
+  /* @internal */ flowNode?: FlowNode // 控制流 节点 (绑定时初始化)
+  /* @internal */ emitNode?: EmitNode // Associated EmitNode (initialized by transforms)
+  /* @internal */ contextualType?: Type // 重载时用的临时上下文
+  /* @internal */ inferenceContext?: InferenceContext // 推理上下文
+}
+```
+
+以 `const a = 1` 举例，它就包含了 `SyntaxKind.VariableStatement`、`SyntaxKind.VariableDeclarationList`、`SyntaxKind.VariableDeclaration`、`SyntaxKind.Identifier`、`SyntaxKind.NumberLiteral` 五种
+
+但是上面的 `Node` 和 `SyntaxKind` 都只是对语法的种类进行了（分）归类，TS 还是不知道 `const` 是什么含义，`a` 是什么含义，`=` 是什么含义，
+`1` 是什么含义
+
+TS 使用 unicode 定义了一组字符编码表 `CharacterCodes`（在 `TypeScript/src/compiler/types.ts` 文件中，搜索 `export const enum CharacterCodes`），这样就能判断 `a` 是一个 `Identifier` 了（变量名的起始字符规则和可以包含的字符规则是固定的，只需从上述字符编码表中进行匹配就可以确认是否为一个 `Identifier`），从而将 “代码字符串” 解析为一个个 `SyntaxKind`(`Token`)
+
+```ts
+export const enum CharacterCodes {
+  // ...
+  space = 0x0020, // " "
+  _ = 0x5f,
+  $ = 0x24,
+
+  _0 = 0x30,
+  _1 = 0x31,
+  _2 = 0x32,
+  _3 = 0x33,
+  _4 = 0x34,
+  _5 = 0x35,
+  _6 = 0x36,
+  _7 = 0x37,
+  _8 = 0x38,
+  _9 = 0x39,
+
+  a = 0x61,
+  b = 0x62,
+  c = 0x63,
+  d = 0x64,
+  e = 0x65,
+  // ...
+}
+```
+
+TS 中将 “代码字符串” 解析为 “SyntaxKind” 的行为叫 “扫描”，其使用 scan 函数进行处理（在 `TypeScript/src/compiler/scanner.ts` 文件中，搜索 `function scan(): SyntaxKind {`），其本质为一个 `有限自动状态机`
+
+那么什么是状态机呢？它表示有限个状态以及在这些状态之间的转移和动作；比如在表格排序按钮中，一共有默认排序、升序、降序，那么在默认排序状态点击时，会变为升序状态；升序状态点击时，会变为降序状态；在降序状态点击时，会变为默认状态
+
+在上述表头排序的例子中：
+
+三种状态是有限的：默认、升、降
+每次只能有一种状态
+且能根据当前状态以一定的规则装换到下一个状态
+
+回到代码中，以 `=` 字符举例，发现它，可能是 `=>`，可能是赋值符 `=`，可能是判断严格相等 `===` 的运算符（还有可能是 git 里冲突的标记符号）等
+
+这在 scan 函数中是这样实现的
+
+```ts
+function scan(): SyntaxKind {
+  while (true) {
+    tokenFlags = TokenFlags.None
+    const ch = codePointAt(text, pos)
+    switch (ch) {
+      case CharacterCodes.equals:
+        // 如果是冲突标记
+        if (isConflictMarkerTrivia(text, pos)) {
+          pos = scanConflictMarkerTrivia(text, pos, error)
+          if (skipTrivia) {
+            continue
+          } else {
+            return (token = SyntaxKind.ConflictMarkerTrivia)
+          }
+        }
+        // 如果下一个还是 =
+        if (text.charCodeAt(pos + 1) === CharacterCodes.equals) {
+          // 如果下一个又是 =
+          if (text.charCodeAt(pos + 2) === CharacterCodes.equals) {
+            return (pos += 3), (token = SyntaxKind.EqualsEqualsEqualsToken) // 那么它就是 ===
+          }
+          return (pos += 2), (token = SyntaxKind.EqualsEqualsToken) // 否则就是只有两个等号 ==
+        }
+        // 如果下一个是 >
+        if (text.charCodeAt(pos + 1) === CharacterCodes.greaterThan) {
+          return (pos += 2), (token = SyntaxKind.EqualsGreaterThanToken) // 那么就是 =>
+        }
+        pos++
+        return (token = SyntaxKind.EqualsToken) // 上面都没匹配，就是赋值符 =
+    }
+  }
+}
+```
+
+有了上面 scan 得到的 Token 后，就可以 Token 的类别将源码解析成一个个 Node 并生成一个 AST 了（在 `TypeScript/src/compiler/parser.ts` 文件中，搜索 `function parseSourceFileWorker(languageVersion: ScriptTarget` 查看上述逻辑）
+
+我们拿到的 Node 节点就和上面代码中的 `interface Node` 一样，包含节点的起始、结束位置信息、节点类型、引用关系等
+
+在 Node 中可能存在引用外部变量的情况
+
+如：
+
+```ts
+const a = 1
+
+console.log(a)
+```
+
+因此在 bind 阶段，会将三种情况的 Token 保存在符号表中
+
+见 `TypeScript/src/compiler/binder.ts` 文件中的 `function bind(node: Node | undefined): void` 函数说明
+
+其会将声明节点绑定到 symbol（符号）
+规则有三种：
+
+当前容器符号的“导出”表，如模块中的导出
+当前容器符号的“成员”表，如对象中的属性
+当前容器的“局部变量”表，如函数内的局部变量
+
+如上述代码块，其根节点会保存符号表 locals，即局部变量 a
+
+当上面所有的做完以后，ts 可以进行类型检查
+
+以下面的代码块为例
+
+```ts
+const b: string = 2
+```
+
+ts 会报错：不能将类型“number”分配给类型“string”
+
+在 Node 节点中，还将保存类型信息，即 type 属性
+
+解析后的 Node 节点为
+
+```json
+{
+  // ...
+  "kind": 294,
+  "statements": [
+    {
+      // ...
+      "kind": 229,
+      "declarationList": {
+        // ...
+        "kind": 247,
+        "declarations": [
+          {
+            // ...
+            "kind": 246,
+            "name": {
+              // ...
+            },
+            "initializer": {
+              "pos": 17,
+              "end": 19,
+              "flags": 0,
+              "modifierFlagsCache": 0,
+              "transformFlags": 0,
+              "parent": "[Circular ~.statements.0.declarationList.declarations.0]",
+              "kind": 8,
+              "text": "2",
+              "numericLiteralFlags": 0
+            },
+            "type": {
+              "pos": 8,
+              "end": 15,
+              "flags": 0,
+              "modifierFlagsCache": 0,
+              "transformFlags": 1,
+              "parent": "[Circular ~.statements.0.declarationList.declarations.0]",
+              "kind": 146
+            }
+          }
+        ]
+      }
+    }
+  ]
+}
+```
+
+在这种情况下，我们就可以通过 initializer，type 两个属性得出初始值和类型是否能通过类型检查了
+
+当然 TS 进行类型检查的核心函数是 `checkSourceElementWorker`，其本质也是通过判断节点的 kind，然后执行不同的 check 函数
+
+```ts
+switch (kind) {
+  case SyntaxKind.TypeParameter:
+    return checkTypeParameter(node as TypeParameterDeclaration)
+  case SyntaxKind.Parameter:
+    return checkParameter(node as ParameterDeclaration)
+  case SyntaxKind.PropertyDeclaration:
+    return checkPropertyDeclaration(node as PropertyDeclaration)
+  case SyntaxKind.PropertySignature:
+    return checkPropertySignature(node as PropertySignature)
+  // ...
+}
+```
+
+如校验元组中，每个成员必须都要具名都都不具名
+
+```ts
+function checkTupleType(node: TupleTypeNode) {
+  const elementTypes = node.elements
+  let seenOptionalElement = false
+  let seenRestElement = false
+  const hasNamedElement = some(elementTypes, isNamedTupleMember)
+  for (const e of elementTypes) {
+    if (e.kind !== SyntaxKind.NamedTupleMember && hasNamedElement) {
+      grammarErrorOnNode(
+        e,
+        Diagnostics.Tuple_members_must_all_have_names_or_all_not_have_names
+      )
+      break
+    }
+  }
+}
+```
+
+对上文代码示例 `const b: string = 2`，会执行 `reportRelationError` 函数，将错误信息设置为 `Diagnostics.Type_0_is_not_assignable_to_type_1`
+
+```ts
+function reportRelationError(
+  message: DiagnosticMessage | undefined,
+  source: Type,
+  target: Type
+) {
+  if (!message) {
+    if (relation === comparableRelation) {
+      message = Diagnostics.Type_0_is_not_comparable_to_type_1
+    } else if (sourceType === targetType) {
+      message =
+        Diagnostics.Type_0_is_not_assignable_to_type_1_Two_different_types_with_this_name_exist_but_they_are_unrelated
+    } else if (
+      exactOptionalPropertyTypes &&
+      getExactOptionalUnassignableProperties(source, target).length
+    ) {
+      message =
+        Diagnostics.Type_0_is_not_assignable_to_type_1_with_exactOptionalPropertyTypes_Colon_true_Consider_adding_undefined_to_the_types_of_the_target_s_properties
+    } else {
+      if (
+        source.flags & TypeFlags.StringLiteral &&
+        target.flags & TypeFlags.Union
+      ) {
+        const suggestedType = getSuggestedTypeForNonexistentStringLiteralType(
+          source as StringLiteralType,
+          target as UnionType
+        )
+        if (suggestedType) {
+          reportError(
+            Diagnostics.Type_0_is_not_assignable_to_type_1_Did_you_mean_2,
+            generalizedSourceType,
+            targetType,
+            typeToString(suggestedType)
+          )
+          return
+        }
+      }
+      // 这里这里
+      message = Diagnostics.Type_0_is_not_assignable_to_type_1
+    }
+  }
+}
+```
+
+因此，如果要快速找到 TS 中的某条报错信息对应的底层逻辑，可以到源码中搜索 `Diagnostics` 的属性
+
+总结出 TS 的编译流程，我们可以回答上文的三个问题
+
+
+### TS 中的类型是什么？
