update: 面试官：你说你会玩TS类型体操，那你能把类型打印出来吗？

--- a/source/_posts/2022_05_面试官：你说你会玩TS类型体操，那你能把类型打印出来吗？.md
+++ b/source/_posts/2022_05_面试官：你说你会玩TS类型体操，那你能把类型打印出来吗？.md
@@ -24,6 +24,8 @@ console.log(A)
 
 **_我_**：这个问题对应的需求场景不常见，我来试试...
 
+注：如果你只想查看如何实现“打印类型”，请跳转到最后一章
+
 在回答这个问题之前，我们需要对 TS 的源码/原理有基本的认识
 
 然后要先回答这三个问题：
@@ -92,7 +94,13 @@ VSCode 中的 TS 语言服务是可以自定义的
 
 ![](version-type-custom.jpg)
 
+这样，你就可以魔改 TS 源码，并应用到你的编辑器啦
+
 选择我们刚刚自定义的工作区版本，然后你会发现 VSCode 自动找到了这个目录下的 tsserver.js 文件，这个文件是干啥的呢？让我们在下文进行讲解
+
+#### 其他
+
+使用它进行 debug，学习源码的执行流程
 
 ### TS 源码的目录结构和对应文件的用处
 
@@ -116,7 +124,7 @@ VSCode 中的 TS 语言服务是可以自定义的
 
 ### TS 编译流程
 
-该部分可以阅读[TypeScript 源码详细解读(1)总览](https://www.cnblogs.com/xuld/p/12180913.html)
+_在互联网中鲜有对 TS 源码分析的文章，但是 TS 官方实际上有对 TS 原理的解释，如果你想了解更多可以阅读[TypeScript 代码库内部的术语-Terminology_from inside_the_codebase](https://github.com/microsoft/TypeScript-Compiler-Notes/blob/main/GLOSSARY.md)、[TypeScript 编译器内部结构-TypeScript_Compiler_Internals](https://basarat.gitbook.io/typescript/overview/scanner)，和本文文末的参考文章_
 
 我们使用 TS 的目的就是要让他进行类型检查，通过后，输出为浏览器可直接解释执行的 JS 文件
 
@@ -408,5 +416,339 @@ function reportRelationError(
 
 总结出 TS 的编译流程，我们可以回答上文的三个问题
 
+TS 源代码经过词法扫描，生成Token标记，通过语法分析，生成语法树，再通过语义分析，生成符号表，进行类型检查等，最后将源代码编译为 JS 语法
 
 ### TS 中的类型是什么？
+
+在扫描阶段，TS 中的类型是一个个 Token，如 `const a: string = '1'` 中的 `string`
+
+![](ts-string-keyword-example.jpg)
+
+执行 scan 函数时，扫描到 string 时，会认为它是一个 Identifier，然后调用 `getIdentifierToken` 函数，符合 textToKeyword 中的一个关键字 `string` ，标记为 `150`
+
+![](ts-parser-string.jpg)
+
+根据解析到的 token，将 `: string` 解析为一个 `TypeNode`，如上图所示，并挂到最后生成的节点上
+
+![](ts-node-type_node.jpg)
+
+type 属性其实是一个对象，因此，你可以理解为类型的本质是使用对象来描述的概念
+
+### TS 中的类型为什么不能当做值来使用？
+
+我们知道，TS 最终通过会生成浏览器可执行的 JS 代码，在这期间会去掉类型的声明、使用和断言等，如果类型可以当值使用了，那么就会出现这样的情况
+
+```ts
+interface A {}
+const a = A
+const b = 1
+```
+
+TS 编译后，会变成
+
+```txt
+const a =
+const b = 1
+```
+
+这显然不符合 JS 语法规范，1 是 const 声明的常量必须赋初始值，2 是赋值符右边不能没有东西
+
+### TS 中是如何处理像“类型不能当一个值来使用”的错误的？
+
+根据上文的分析，在 bind 阶段，会将三种东西放到符号表中
+
+```txt
+当前容器符号的“导出”表，如模块中的导出
+当前容器符号的“成员”表，如对象中的属性
+当前容器的“局部变量”表，如函数内的局部变量
+```
+
+符号表中还包含了我们声明的类型
+
+假设类型做为值时，根据 JS 读取变量的规则，会到作用域链上依次查找，也就是每个作用域下的局部（全局）变量，如果找到的是一个类型，自然就能抛出错误
+
+再根据上文提到的各种 `Diagnostics`，得到报错的信息
+
+### 把类型打印出来
+
+我们想得到的类型长什么样呢？把上文提到的 TypeNode 打印出来吗？那应该没有很多人看的懂吧
+
+我们能否把类型转换为字符串呢？答案是可以的
+
+TS compiler API 提供了把 TS 文件，转换为 JS 文件的方法，参考文档，[一个简单的变换函数\_ts.transpileModule](https://github.com/microsoft/TypeScript/wiki/Using-the-Compiler-API#a-simple-transform-function)
+
+在 `ts.transpileModule` 中，可以添加 `transformers`，即自定义的转换器
+
+```js
+ts.transpileModule(yourFileData /* 你读取的 ts 文件的结果 */, {
+  transformers: { before: [xxx /* 自定义的转换器 */] },
+})
+```
+
+在自定义转换器中，我们可以把能找到类型声明的标识符替换一下，得到其对应的类型字符串
+
+首先创建两个文件
+
+`type-print.mjs`、`test.ts`
+
+要提取类型，并将其转换为类型字符串，那么需要调用 `ts.createProgram` 生成一个 program，然后调用 `program.getTypeChecker` 获得 `typeChecker`
+
+type-print.mjs
+
+```js
+import ts from "typescript"
+import fs from "fs"
+
+const program = ts.createProgram(["./test.ts"], { emitDeclarationOnly: false })
+const result = ts.transpileModule(fs.readFileSync("./test.ts").toString(), {
+  transformers: { before: [createTransformer(program.getTypeChecker())] },
+})
+```
+
+接下来实现 `createTransformer` 函数
+
+```js
+/**
+ * 创建一个 transformer
+ * @param {ts.TypeChecker} typeChecker
+ */
+const createTransformer = (typeChecker) => {
+  return (context) => {
+    return (node) => ts.visitNode(node, visit /* 我们需要实现这个函数 */)
+  }
+}
+```
+
+在上述函数中，transform 会遍历所有节点，然后可以对节点进行一些替换操作，我们需要实现 visit 函数
+
+```js
+/**
+ * node 遍历
+ * @param {ts.Node} node
+ */
+function visit(node) {
+  // 如果 node 的类型 （SyntaxKind） 是 标识符 （Identifier），并且有 id，那么就认为是把类型当做值来使用
+  // 找到节点的父节点，并依次向父级查找，依次查找，直到找到含有 locals 属性且该映射表中含有当前标识符的节点
+  // 用 typeChecker.getTypeAtLocation 得到 type
+  // 然后在不同的 type 中，执行不同的生成类型字符串的逻辑
+  // 其最生成逻辑是调用 typeChecker.typeToString，并将结果传递给 ts.factory.createStringLiteral 函数，将节点替换为 StringLiteral
+}
+```
+
+visit 函数的逻辑我们梳理了一遍，接下来就是实现部分了
+
+我们首先假设我们要打印的类型很简单
+
+test.ts
+```ts
+type A = 1
+console.log(A)
+```
+
+在 ts 的 Type 类型中，有 flags 用于标识类型的种类，如这里的 A 就是数字字面量类型，那么其种类就为 `ts.TypeFlag.NumberLiteral`
+
+当然，在判断类型之前，首先要拿到类型
+
+```js
+if (node.kind === ts.SyntaxKind.Identifier && node.id) {
+  // 父节点
+  let parent = node.parent
+  // 类型的符号
+  let symbol
+  // 符号标记，即能不能找到对应的声明
+  let symbolFlag
+  // 要被打印的类型的字符串初始值，未知类型打印 error
+  let typeStr = "error"
+
+  const updateTypeStr = (str) => {
+    if (typeStr === "error") typeStr = str
+  }
+  /*
+   * 查找父节点的 locals，拿到类型的符号
+   */
+  while (
+    !(
+      parent &&
+      parent.locals instanceof Map &&
+      parent.locals.size > 0 &&
+      symbolFlag
+    ) &&
+    parent
+  ) {
+    const locals = parent.locals
+    symbolFlag = !!parent.locals && (symbol = locals.get(node.escapedText))
+    parent = parent.parent
+  }
+  if (!symbolFlag) return ts.visitEachChild(node, visit, context)
+  // 通过 typeChecker.getTypeAtLocation 函数，这里的 type 就是我们拿到的类型
+  const type = typeChecker.getTypeAtLocation(symbol.declarations[0].name)
+}
+```
+
+通过 `type.flags` 即可判断类型的种类，由于 ts 内部是通过二进制（表现仍为10进制）来存储类型种类的，因此需要用逻辑与 `&` 来判断是否包含此类型
+
+```js
+if (type.flags & ts.TypeFlag.NumberLiteral) {
+    updateTypeStr(typeChecker.typeToString(type))
+}
+return ts.factory.createStringLiteral(typeStr)
+```
+
+这样就可以得到结果 `result`
+
+最后生成文件并执行，即可打印出 1
+
+```js
+fs.writeFileSync("./index.js", result.outputText)
+```
+
+生成文件结果
+
+index.js
+```js
+console.log("2");
+```
+
+```shell
+node ./index.js
+# 1
+```
+
+当然除了数字是字面量类型，还有很多其他字面量类型，这里可以直接用 `ts.TypeFlag.Literal` 来判断
+
+除了简单类型，还有如 `interface`（接口），联合类型 （`string | number`）、相交类型（`{ a: 1 } & { b: 2 }`）之类的复杂类型
+
+我们都可以像上面一样写判断一一处理
+
+完整代码如下
+
+type-print.mjs
+```js
+import ts from "typescript"
+import fs from "fs"
+import path from "path"
+
+/**
+ *
+ * @param {ts.TypeChecker} typeChecker
+ * @returns
+ */
+const createTransformer = (typeChecker) => {
+  return (context) => {
+    return (node) => ts.visitNode(node, visit)
+    /**
+     *
+     * @param {ts.Node} node
+     * @returns
+     */
+    function visit(node) {
+      if (node.kind === ts.SyntaxKind.Identifier && node.id) {
+        let parent = node.parent
+        let symbol
+        let symbolFlag
+        let typeStr = "error"
+
+        const updateTypeStr = (str) => {
+          if (typeStr === "error") typeStr = str
+        }
+
+        while (
+          !(
+            parent &&
+            parent.locals instanceof Map &&
+            parent.locals.size > 0 &&
+            symbolFlag
+          ) &&
+          parent
+        ) {
+          const locals = parent.locals
+          symbolFlag =
+            !!parent.locals && (symbol = locals.get(node.escapedText))
+          parent = parent.parent
+        }
+
+        if (!symbolFlag) return ts.visitEachChild(node, visit, context)
+        
+        const type = typeChecker.getTypeAtLocation(symbol.declarations[0].name)
+        
+        if (type.flags & ts.TypeFlags.Object) {
+          if (
+            type.flags & ts.TypeFlags.Enum ||
+            type.flags & ts.TypeFlags.EnumLike ||
+            type.flags & ts.TypeFlags.EnumLiteral
+          ) {
+            return ts.factory.createIdentifier(typeChecker.typeToString(type))
+          }
+          
+          const fields = []
+          const properties = type.getProperties()
+
+          for (const prop of properties) {
+            const name = prop.getName()
+            const propType = typeChecker.getTypeOfSymbolAtLocation(prop, node)
+            const propTypeName = typeChecker.typeToString(propType)
+            const hasQuestionToken = prop.valueDeclaration ? !!prop.valueDeclaration.questionToken : false
+            fields.push(
+              `${name}${hasQuestionToken ? "?" : ""}: ${propTypeName};`
+            )
+          }
+
+          updateTypeStr(fields.length > 0 ? `{\n\t${fields.join("\n   ")}\n}` : '{}')
+        } else if (type.flags & ts.TypeFlags.UnionOrIntersection) {
+            const fields = []
+
+            for (const prop of type.types) {
+                fields.push(typeChecker.typeToString(prop))
+            }
+
+            let separator = ''
+            if (type.flags & ts.TypeFlags.Union) {
+                separator = '|'
+            } else if (type.flags & ts.TypeFlags.Intersection) {
+                separator = '&'
+            }
+
+            updateTypeStr(fields.join(` ${separator} `))
+        } else if (type.flags & ts.TypeFlags.Literal) {
+            updateTypeStr(typeChecker.typeToString(type))
+        }
+
+        return ts.factory.createStringLiteral(typeStr)
+      }
+      // 其它节点保持不变
+      return ts.visitEachChild(node, visit, context)
+    }
+  }
+}
+
+function resolvePath(inputPath) {
+    return path.resolve(process.cwd(), inputPath)
+}
+
+const program = ts.createProgram([resolvePath('./test.ts')], { emitDeclarationOnly: false })
+const result = ts.transpileModule(fs.readFileSync(resolvePath('./test.ts')).toString(), {
+  transformers: { before: [createTransformer(program.getTypeChecker())] },
+})
+
+fs.writeFileSync("./index.js", result.outputText)
+
+console.log("编译成功")
+
+```
+
+最后结果
+
+![](ts-print-demo.jpg)
+
+你可以在 github 中获取这段代码 [github-ts-type-print](https://github.com/kawayiLinLin/ts-type-print)
+
+> 参考文章（力荐）：
+> [博客园-TypeScript源码详细解读(1)总览](https://www.cnblogs.com/xuld/p/12180913.html)
+> [博客园-TypeScript源码详细解读(2)词法1-字符处理](https://www.cnblogs.com/xuld/p/12187519.html)
+> [博客园-TypeScript源码详细解读(3)词法2-标记解析](https://www.cnblogs.com/xuld/p/12187519.html)
+> [博客园-TypeScript 源码详细解读(4)语法1-语法树](https://www.cnblogs.com/xuld/p/12238167.html)
+> [博客园-TS原理详细解读(5)语法2-语法解析](https://www.cnblogs.com/xuld/p/12266985.html)
+> [博客园-TS原理详细解读(7)绑定1-符号](https://www.cnblogs.com/xuld/p/12359115.html)
+> [博客园-给萌新的TS_custom_transformer_plugin教程——TypeScript 自定义转换器插件](https://www.cnblogs.com/xuld/p/12516828.html)
+> [StackOverflow-print-typescript-types-into-console-file](https://stackoverflow.com/questions/67222224/print-typescript-types-into-console-file)
+> [CSDN-浅析TypeScript_Compiler原理](https://blog.csdn.net/qiwoo_weekly/article/details/122725686)
