--- a/source/_posts/2022_05_面试官：你说你会玩TS类型体操，那你能把类型打印出来吗？.md
+++ b/source/_posts/2022_05_面试官：你说你会玩TS类型体操，那你能把类型打印出来吗？.md
@@ -743,12 +743,23 @@ console.log("编译成功")
 你可以在 github 中获取这段代码 [github-ts-type-print](https://github.com/kawayiLinLin/ts-type-print)
 
 > 参考文章（力荐）：
+>
 > [博客园-TypeScript源码详细解读(1)总览](https://www.cnblogs.com/xuld/p/12180913.html)
+>
 > [博客园-TypeScript源码详细解读(2)词法1-字符处理](https://www.cnblogs.com/xuld/p/12187519.html)
+>
 > [博客园-TypeScript源码详细解读(3)词法2-标记解析](https://www.cnblogs.com/xuld/p/12187519.html)
+>
 > [博客园-TypeScript 源码详细解读(4)语法1-语法树](https://www.cnblogs.com/xuld/p/12238167.html)
+>
 > [博客园-TS原理详细解读(5)语法2-语法解析](https://www.cnblogs.com/xuld/p/12266985.html)
+>
 > [博客园-TS原理详细解读(7)绑定1-符号](https://www.cnblogs.com/xuld/p/12359115.html)
+>
 > [博客园-给萌新的TS_custom_transformer_plugin教程——TypeScript 自定义转换器插件](https://www.cnblogs.com/xuld/p/12516828.html)
+>
 > [StackOverflow-print-typescript-types-into-console-file](https://stackoverflow.com/questions/67222224/print-typescript-types-into-console-file)
+>
 > [CSDN-浅析TypeScript_Compiler原理](https://blog.csdn.net/qiwoo_weekly/article/details/122725686)
+>
+> [我读 Typescript 源码的秘诀都在这里了](https://juejin.cn/post/7015567717876908063)
