update：React 全家桶

--- a/source/_posts/2022_07_React-全家桶.md
+++ b/source/_posts/2022_07_React-全家桶.md
@@ -138,6 +138,8 @@ function updateProps(dom, oldProps = {}, newProps = {}) {
             for (let attr in styleObj) {
                 dom.style[attr] = styleObj[attr]
             }
+        } else if (/^on[A-Z].*/.test(key)) {
+            dom[key.toLowerCase()] = newProps[key]
         } else {
             dom[key] = newProps[key]
         }
@@ -166,6 +168,144 @@ export default ReactDOM
 
 ## 组件
 
-将UI分离成独立的、可复用的组件
+将UI分离成独立的、可复用的组件，概念上类似于js函数
+
+
+函数组件：
+1. 接收一个props对象并返回一个React元素的函数
+2. 名称以大写字符开头
+3. 先定义再使用
+4. 函数组件的返回值有且只能有一个根元素
+5. React元素的类型可以是字符串，一个 div，或者一个函数组件类型
+6. 可以给函数组件传递属性，最终会传递给props组件对象
+
+src/react-dom.js
+
+```js
+function createDOM(vdom) {
+    if (type === REACT_TEXT) {
+        // ...
+    } else if (typeof type === 'function') {
+        return mountFunctionComponent(vdom)
+    }
+}
+
+function mountFunctionComponent(vdom) {
+    const { type, props } = vdom
+    const renderVdom = type(props)
+
+    return createDOM(renderVdom)
+}
+```
+
+类组件：
+1. 根据属性创建类的实例，并调用实例的render方法返回React元素
+
+src/react.js
+
+```js
+import { Component } from './Component'
+
+export { Component }
+```
+
+src/component
+
+```js
+export class Component {
+    static isReactComponent = true
+    constructor(props) {
+        this.props = props
+    }
+}
+```
+
+src/react-dom.js
+
+```js
+function createDOM(vdom) {
+    if (type === REACT_TEXT) {
+        // ...
+    } else if (typeof type === 'function') {
+        if (type.isReactComponent) return mountClassComponent(vdom)
+        return mountFunctionComponent(vdom)
+    }
+}
+
+function mountClassComponent(vdom) {
+    const { type, props } = vdom
+    const classInstance = new type(props)
+
+    const renderVdom = classInstance.render()
+
+    return createDOM(renderVdom)
+}
+```
+
+## 类组件的更新
+
+src/component
+
+```js
+class Updater {
+    constructor(classInstance) {
+        this.classInstance = classInstance
+        this.pendingStates = []  // 后面要支持批量更新
+    }
+
+    addState(partialState) {
+        this.pendingStates.push(partialState)
+        this.emitUpdate()
+    }
+
+    emitUpdate() {
+        this.updateComponent()
+    }
+
+    updateComponent() {
+        const { classInstance, pendingStates } = this
+        if (pendingStates.length > 0) { // 有将要进行的更新
+            shouldUpdate(classInstance, this.getState())
+        }
+    }
+
+    getState() {
+        const { classInstance, pendingStates } = this
+        let { state } = classInstance
+
+        pendingStates.forEach(nextState => {
+            state = {
+                ...state,
+                ...nextState
+            }
+        })
+        pendingStates.length = 0
+        return state
+    }
+}
+
+function shouldUpdate(classInstance, nextState) {
+    classInstance.state = nextState
+    classInstance.forceUpdate()
+}
+
+export class Component {
+    static isReactComponent = true
+    constructor(props) {
+        this.props = props
+        this.state = {}
+        // 每个类组件的实例都会有一个更新器
+        this.updater = new Updater(this)
+    }
+
+    setState(partialState) {
+        this.updater.addState(partialState)
+    }
+
+    forceUpdate() {
+
+    }
+}
+```
 
 ## fiber
