update: React 全家桶

--- a/source/_posts/2022_07_React-全家桶.md
+++ b/source/_posts/2022_07_React-全家桶.md
@@ -308,4 +308,86 @@ export class Component {
 }
 ```
 
+## setState
+
+src/react-dom
+
+```js
+function mountClassComponent() {
+    const { type, props } = vdom
+    const classInstance = new type(props)
+
+    const renderVdom = classInstance.render()
+    // 缓存上次生成的虚拟 dom，放在组件实例上
+    vdom.classInstance = classInstance
+    classInstance.oldRenderVdom = vdom.oldRenderVdom = renderVdom
+
+    return createDOM(renderVdom)
+}
+
+function mountFunctionComponent(vdom) {
+    const { type, props } = vdom
+    const renderVdom = type(props)
+    // 缓存
+    vdom.oldRenderVdom = renderVdom
+
+    return createDOM(renderVdom)
+}
+
+function createDOM(vdom) {
+    // ...
+    // 缓存真实 dom 到虚拟dom上
+    vdom.dom = dom
+}
+
+// 基于 虚拟dom找到真实dom
+export function findDOM(vdom) {
+    if (!vdom) return null
+    if (vdom.dom) return vdom.dom
+    // 函数组件没有对应真实dom，递归查找
+    // vdom.type.isReactComponent 或用如下方式区分函数组件和类组件
+    const renderVdom = vdom.classInstance ? vdom.classInstance.oldRenderVdom : vdom.oldRenderVdom
+    return findDOM(renderVdom)
+}
+
+// 比较虚拟dom，更新真实 dom
+export function compareTwoVdom(parentNode, oldVdom, newVdom) {
+    const oldDOM = findDOM(oldVdom)
+    const newDOM = createDOM(newVdom)
+    parentNode.replaceChild(oldDOM, newDOM)
+}
+```
+
+src/component
+
+```js
+import { findDOM } from './react-dom'
+export class Component {
+    static isReactComponent = true
+    constructor(props) {
+        this.props = props
+        this.state = {}
+        // 每个类组件的实例都会有一个更新器
+        this.updater = new Updater(this)
+    }
+
+    setState(partialState) {
+        this.updater.addState(partialState)
+    }
+
+    forceUpdate() {
+        const oldRenderVdom = this.oldRenderVdom
+        const oldDOM = findDOM(oldRenderVdom)
+        // 渲染新的虚拟dom
+        const newRenderVdom = this.render()
+        compareTwoVdom(oldDOM.parentNode, oldRenderVdom, newRenderVdom)
+        this.oldRenderVdom = newRenderVdom
+    }
+}
+```
+
+## 合成事件和批量更新
+
+只要是 react 能管理的方法，都是批量的，比如合成事件和生命周期回调中，状态修改和视图更新
+
 ## fiber
